HLS/vitis_hls.log
INFO: [HLS 200-10] Running '/tools/Xilinx/Vitis_HLS/2022.2/bin/unwrapped/lnx64.o/vitis_hls'
INFO: [HLS 200-10] For user 'lilian' on host 'lilian' (Linux_x86_64 version 5.15.0-105-generic) on Thu May 02 22:02:47 PDT 2024
INFO: [HLS 200-10] On os Ubuntu 20.04.6 LTS
INFO: [HLS 200-10] In directory '/home/lilian/school/UnderWaterCommunications/HLS'
Sourcing Tcl script '/home/lilian/school/UnderWaterCommunications/HLS/receiver/solution1/csim.tcl'
INFO: [HLS 200-1510] Running: source /home/lilian/school/UnderWaterCommunications/HLS/receiver/solution1/csim.tcl
INFO: [HLS 200-1510] Running: open_project receiver 
INFO: [HLS 200-10] Opening project '/home/lilian/school/UnderWaterCommunications/HLS/receiver'.
INFO: [HLS 200-1510] Running: set_top receiver 
INFO: [HLS 200-1510] Running: add_files rx_src/QR.cpp 
INFO: [HLS 200-10] Adding design file 'rx_src/QR.cpp' to the project
INFO: [HLS 200-1510] Running: add_files rx_src/QR.h 
INFO: [HLS 200-10] Adding design file 'rx_src/QR.h' to the project
INFO: [HLS 200-1510] Running: add_files rx_src/alignment.h 
INFO: [HLS 200-10] Adding design file 'rx_src/alignment.h' to the project
INFO: [HLS 200-1510] Running: add_files rx_src/convolutional_encoder.h 
INFO: [HLS 200-10] Adding design file 'rx_src/convolutional_encoder.h' to the project
INFO: [HLS 200-1510] Running: add_files rx_src/convolutional_encoder_lookup.h 
INFO: [HLS 200-10] Adding design file 'rx_src/convolutional_encoder_lookup.h' to the project
INFO: [HLS 200-1510] Running: add_files rx_src/convolutional_encoder_shift_register.h 
INFO: [HLS 200-10] Adding design file 'rx_src/convolutional_encoder_shift_register.h' to the project
INFO: [HLS 200-1510] Running: add_files rx_src/eigen.cpp 
INFO: [HLS 200-10] Adding design file 'rx_src/eigen.cpp' to the project
INFO: [HLS 200-1510] Running: add_files rx_src/eigen.h 
INFO: [HLS 200-10] Adding design file 'rx_src/eigen.h' to the project
INFO: [HLS 200-1510] Running: add_files rx_src/matrixOperations.cpp 
INFO: [HLS 200-10] Adding design file 'rx_src/matrixOperations.cpp' to the project
INFO: [HLS 200-1510] Running: add_files rx_src/matrixOperations.h 
INFO: [HLS 200-10] Adding design file 'rx_src/matrixOperations.h' to the project
INFO: [HLS 200-1510] Running: add_files rx_src/parity_table.h 
INFO: [HLS 200-10] Adding design file 'rx_src/parity_table.h' to the project
INFO: [HLS 200-1510] Running: add_files rx_src/receiver.cpp 
INFO: [HLS 200-10] Adding design file 'rx_src/receiver.cpp' to the project
INFO: [HLS 200-1510] Running: add_files rx_src/receiver.h 
INFO: [HLS 200-10] Adding design file 'rx_src/receiver.h' to the project
INFO: [HLS 200-1510] Running: add_files rx_src/svd.cpp 
INFO: [HLS 200-10] Adding design file 'rx_src/svd.cpp' to the project
INFO: [HLS 200-1510] Running: add_files rx_src/svd.h 
INFO: [HLS 200-10] Adding design file 'rx_src/svd.h' to the project
INFO: [HLS 200-1510] Running: add_files rx_src/viterbi_branch_table.h 
INFO: [HLS 200-10] Adding design file 'rx_src/viterbi_branch_table.h' to the project
INFO: [HLS 200-1510] Running: add_files rx_src/viterbi_decoder_config.h 
INFO: [HLS 200-10] Adding design file 'rx_src/viterbi_decoder_config.h' to the project
INFO: [HLS 200-1510] Running: add_files rx_src/viterbi_decoder_core.h 
INFO: [HLS 200-10] Adding design file 'rx_src/viterbi_decoder_core.h' to the project
INFO: [HLS 200-1510] Running: add_files rx_src/viterbi_decoder_scalar.h 
INFO: [HLS 200-10] Adding design file 'rx_src/viterbi_decoder_scalar.h' to the project
INFO: [HLS 200-1510] Running: add_files -tb rx_src/receiver_tb.cpp -cflags -Wno-unknown-pragmas -Wno-unknown-pragmas -Wno-unknown-pragmas -Wno-unknown-pragmas -csimflags -Wno-unknown-pragmas 
INFO: [HLS 200-10] Adding test bench file 'rx_src/receiver_tb.cpp' to the project
INFO: [HLS 200-1510] Running: open_solution solution1 -flow_target vivado 
INFO: [HLS 200-10] Opening solution '/home/lilian/school/UnderWaterCommunications/HLS/receiver/solution1'.
INFO: [SYN 201-201] Setting up clock 'default' with a period of 10ns.
INFO: [HLS 200-1611] Setting target device to 'xcvu11p-flga2577-1-e'
INFO: [HLS 200-1505] Using flow_target 'vivado'
Resolution: For help on HLS 200-1505 see www.xilinx.com/cgi-bin/docs/rdoc?v=2022.2;t=hls+guidance;d=200-1505.html
INFO: [HLS 200-1510] Running: set_part xcvu11p-flga2577-1-e 
INFO: [HLS 200-1510] Running: create_clock -period 10 -name default 
INFO: [HLS 200-1510] Running: csim_design -quiet 
Running Dispatch Server on port: 45747
INFO: [SIM 211-2] *************** CSIM start ***************
INFO: [SIM 211-4] CSIM will launch GCC as the compiler.
   Compiling ../../../../rx_src/receiver.cpp in debug mode
In file included from ../../../../rx_src/./viterbi_branch_table.h:10,
                 from ../../../../rx_src/viterbi_decoder_core.h:10,
                 from ../../../../rx_src/receiver.cpp:8:
../../../../rx_src/././parity_table.h: In static member function ‘static ParityTable& ParityTable::get()’:
../../../../rx_src/././parity_table.h:38:48: error: use of deleted function ‘ParityTable::ParityTable(ParityTable&&)’
         static auto parity_table = ParityTable();
                                                ^
../../../../rx_src/././parity_table.h:32:5: note: declared here
     ParityTable(ParityTable&&) = delete;
     ^~~~~~~~~~~
make: *** [csim.mk:90: obj/receiver.o] Error 1
ERROR: [SIM 211-100] 'csim_design' failed: compilation error(s).
INFO: [SIM 211-3] *************** CSIM finish ***************
INFO: [HLS 200-111] Finished Command csim_design CPU user time: 1.36 seconds. CPU system time: 0.24 seconds. Elapsed time: 1.59 seconds; current allocated memory: 0.000 MB.
4
    while executing
"source /home/lilian/school/UnderWaterCommunications/HLS/receiver/solution1/csim.tcl"
    invoked from within
"hls::main /home/lilian/school/UnderWaterCommunications/HLS/receiver/solution1/csim.tcl"
    ("uplevel" body line 1)
    invoked from within
"uplevel 1 hls::main {*}$newargs"
    (procedure "hls_proc" line 16)
    invoked from within
"hls_proc [info nameofexecutable] $argv"
INFO: [HLS 200-112] Total CPU user time: 3.97 seconds. Total CPU system time: 0.62 seconds. Total elapsed time: 14.48 seconds; peak allocated memory: 757.383 MB.
